tests/snapshots/binds__bind_change@002.snap
---
source: tests/binds.rs
description: "input: items [\"1\", \"12\", \"13\", \"14\", \"15\", \"16\", \"17\", \"18\", \"19\", \"10\"]\noptions: --bind change:first\nafter:\n  @key Up\n  @key Up"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  10                                                                            "
"  19                                                                            "
"  18                                                                            "
"  17                                                                            "
"  16                                                                            "
"  15                                                                            "
"  14                                                                            "
"> 13                                                                            "
"  12                                                                            "
"  1                                                                             "
"  10/10                                                                      2/0"
">                                                                               "
cursor: (24, 3)
