tests/snapshots/binds__bind_change@003.snap
---
source: tests/binds.rs
description: "input: items [\"1\", \"12\", \"13\", \"14\", \"15\", \"16\", \"17\", \"18\", \"19\", \"10\"]\noptions: --bind change:first\nafter:\n  @char '1'"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  10                                                                            "
"  19                                                                            "
"  18                                                                            "
"  17                                                                            "
"  16                                                                            "
"  15                                                                            "
"  14                                                                            "
"  13                                                                            "
"  12                                                                            "
"> 1                                                                             "
"  10/10                                                                      0/0"
"> 1                                                                             "
cursor: (24, 4)
